--- a/style.css
+++ b/style.css
@@ -85,3 +85,50 @@ body {
 .day__link {
 	color: #1a936f;
 }
+
+.article {
+
+}
+
+.article__title {
+	color: #00487c;
+	padding: 24px 0 0 0;
+}
+
+.article__paragraph {
+	padding: 0;
+}
+
+.article__picture {
+	width: 100%;
+	max-width: 200px;
+	display: block;
+}
+
+.article__picture--right {
+	float: right;
+	margin: 0 0 0 16px;
+}
+
+.article__picture--left {
+	float: left;
+	margin: 0 16px 16px 0 ;
+}
+
+.article__footer {
+	padding: 24px;
+	font-style: italic;
+	color: #3c359b;
+}
+
+.footer {
+	position: fixed;
+	width: 100%;
+	padding: 10px;
+	bottom: 0;
+	left: 0;
+	box-sizing: border-box;
+	border-top: #006400 solid 2px;
+	text-align: center;
+	background-color: #fff;
+}
