--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,8 @@ body {
 	left: 0;
 	box-sizing: border-box;
 	background: #cccccc;
-	text-align: center;
+	display: flex;
+	justify-content: center;
 }
 
 .navigation__link {
