--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,6 +131,7 @@ body {
 	left: 0;
 	box-sizing: border-box;
 	border-top: #006400 solid 2px;
-	text-align: center;
+	display: flex;
+	justify-content: center;
 	background-color: #fff;
 }
